k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcart-backend
  namespace: cloudcart
  labels:
    app: cloudcart-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudcart-backend
  template:
    metadata:
      labels:
        app: cloudcart-backend
    spec:
      containers:
        - name: backend
          image: cloudcart-backend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /api/ready
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "750m"
              memory: "768Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: cloudcart-backend
  namespace: cloudcart
  labels:
    app: cloudcart-backend
spec:
  type: ClusterIP
  selector:
    app: cloudcart-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
