k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcart-ingress
  namespace: cloudcart
  labels:
    app: cloudcart
    layer: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: cloudcart.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cloudcart-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudcart-frontend
                port:
                  number: 80
